--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-REACT_APP_BROWSE_HOST=http://localhost:3001
-REACT_APP_RESTAURANT_HOST=http://localhost:3002
-REACT_APP_CHECKOUT_HOST=http://localhost:3003
-REACT_APP_CONTENT_HOST=http://localhost:5000
+#REACT_APP_BROWSE_HOST=http://localhost:3001
+#REACT_APP_RESTAURANT_HOST=http://localhost:3002
+#REACT_APP_CHECKOUT_HOST=http://localhost:3003
+#REACT_APP_CONTENT_HOST=http://localhost:5000
+
+REACT_APP_BROWSE_HOST=http://52.3.16.90:5002/
+REACT_APP_RESTAURANT_HOST=http://52.3.16.90:5004/
+REACT_APP_CHECKOUT_HOST=http://52.3.16.90:5003/
+REACT_APP_CONTENT_HOST=http://52.3.16.90:5000/
