--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,8 @@
-REACT_APP_BROWSE_HOST=https://browse.demo.microfrontends.com
-REACT_APP_RESTAURANT_HOST=https://order.demo.microfrontends.com
-REACT_APP_CONTENT_HOST=https://content.demo.microfrontends.com
+#REACT_APP_BROWSE_HOST=https://browse.demo.microfrontends.com
+#REACT_APP_RESTAURANT_HOST=https://order.demo.microfrontends.com
+#REACT_APP_CONTENT_HOST=https://content.demo.microfrontends.com
+
+REACT_APP_BROWSE_HOST=http://52.3.16.90:5002/
+REACT_APP_RESTAURANT_HOST=http://52.3.16.90:5004/
+REACT_APP_CHECKOUT_HOST=http://52.3.16.90:5003/
+REACT_APP_CONTENT_HOST=http://52.3.16.90:5000/
